Changes in dashboard.html

--- a/overview/templates/overview/dashboard.html
+++ b/overview/templates/overview/dashboard.html
@@ -12,11 +12,11 @@
             <div class="row align-items-start">
 
                 <!-- Left: Header -->
-                <div class="col-md-3">
-                    <h2 class="fs-3 mb-3">Willkommen auf meinem Dashboard!</h2>
+                <div class="col-md-6">
+                    <h2 class="fs-3 ">Willkommen auf meinem Dashboard!</h2>
                 </div>
                 <!-- RIGHT: GitHubProjekt -->
-                <div class="col-md-9">
+                <div class="col-md-6">
                     <div class="d-flex flex-row-reverse align-items-right gap-3 flex-wrap">
                         <div class="p-2">
                             <a href="https://github.com/GitAlexanderE" target="_blank" class="btn btn-outline-dark my-2"
