--- a/overview/templates/overview/dashboard.html
+++ b/overview/templates/overview/dashboard.html
@@ -19,8 +19,8 @@
                 <div class="col-md-6">
                     <div class="d-flex flex-row-reverse align-items-right gap-3 flex-wrap">
                         <div class="p-2">
-                            <a href="https://github.com/GitAlexanderE" target="_blank" class="btn btn-outline-dark my-2"
-                              data-bs-toggle="tooltip" title="https://github.com/GitAlexanderE">Zum GitHub-Projekt</a>
+                            <a href="https://github.com/GitAlexanderE/trading-analytics-dashboard" target="_blank" class="btn btn-outline-dark my-2"
+                              data-bs-toggle="tooltip" title="https://github.com/GitAlexanderE/trading-analytics-dashboard">Zum GitHub-Projekt</a>
                         </div>
                     </div>
                 </div>
