--- a/overview/templates/overview/statistics.html
+++ b/overview/templates/overview/statistics.html
@@ -18,10 +18,11 @@
             <p class="fs-2 fw-bold mt-1">{{ open_count }}</p>
         </div>
     </div>
+    {% for year, data in yearly_stats.items %}
     <div class="col-md-3">
         <div class="content-card p-3 text-center shadow-sm border rounded">
-            <h5>Daily Profit&Loss</h5>
-            <p class="fs-2 fw-bold mt-1" id="dailyPL">--</p> <!-- js -->
+            <h5>Total Profit&Loss</h5>
+            <p class="fs-2 fw-bold mt-1"> {{ data.total_profit }}  </p>
         </div>
     </div>
     <div class="col-md-3">
