change to statistics

--- a/overview/templates/overview/statistics.html
+++ b/overview/templates/overview/statistics.html
@@ -21,7 +21,7 @@
     <div class="col-md-3">
         <div class="content-card p-3 text-center shadow-sm border rounded">
             <h5>Total Profit&Loss</h5>
-            <p class="fs-2 fw-bold mt-1"> {{ total_profits_all_years }}  </p>
+            <p class="fs-2 fw-bold mt-1"> {{ total_profit_all_years }}  </p>
         </div>
     </div>
     <div class="col-md-3">
