changes in statistics.html

--- a/overview/templates/overview/statistics.html
+++ b/overview/templates/overview/statistics.html
@@ -150,14 +150,14 @@
 </div>
 
 
-<!-- Equity curve card -->
-<div class="row">
-    <div class="col-12">
-        <div class="content-card shadow-sm border rounded">
-            <canvas id="equityChart" width="800" height="400" data-equity='{{ equity_data_json|safe }}'></canvas>
-        </div>
-    </div>
-</div>
+<!--&lt;!&ndash; Equity curve card &ndash;&gt;-->
+<!--<div class="row">-->
+<!--    <div class="col-12">-->
+<!--        <div class="content-card shadow-sm border rounded">-->
+<!--            <canvas id="equityChart" width="800" height="400" data-equity='{{ equity_data_json|safe }}'></canvas>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
