Changes to closed_pos.html and dashboard.html

--- a/overview/templates/overview/closed_positions.html
+++ b/overview/templates/overview/closed_positions.html
@@ -25,7 +25,7 @@
                     <td>{{ t.position_id }}</td>
                     <td>{{ t.symbol }}</td>
                     <td>{{ t.volume }}</td>
-                    <td>{{ t.open_price }}</td>
+                    <td>{{ t.open_price|floatformat:2 }}</td>
                     <td>{{ t.swap }}</td>
                     <td>{{ t.profit }}</td>
                     <td>{{ t.fee }}</td>
