--- a/overview/templates/overview/dashboard.html
+++ b/overview/templates/overview/dashboard.html
@@ -43,7 +43,7 @@
                     class="highlight">MetaTrader5 </span>
                 ausliest, mit <span class="highlight">Python</span> verarbeitet, in einer <span class="highlight">MySQL-Datenbank</span>
                 abspeichert und über <span class="highlight">Django</span> sowie <span
-                    class="highlight">HTML/CSS/JS</span> visualisiert.
+                    class="highlight">HTML/CSS</span> visualisiert.
                 Die Arbeit an solchen Projekten motiviert mich besonders, da ich die Ergebnisse praktisch einsetzen kann
                 und dabei
                 meine Fähigkeiten in der Backend- und Frontendentwicklung kontinuierlich erweitere. Gleichzeitig
@@ -118,7 +118,7 @@
 
                         <div class="workflow-box card shadow-sm p-3 text-center">
                             <i class="bi bi-server fs-1 text-info"></i>
-                            <p class="mt-2 mb-0"><strong>HTML/CSS/JS</strong></p>
+                            <p class="mt-2 mb-0"><strong>HTML/CSS</strong></p>
                         </div>
 
                         <i class="bi bi-arrow-right fs-4 text-muted"></i>
