Changes to closed_pos.html

--- a/overview/templates/overview/closed_positions.html
+++ b/overview/templates/overview/closed_positions.html
@@ -7,7 +7,7 @@
 
 <div class="row content-wrapper">
     <div class="col-md-12">
-        <div class="content-card text-left shadow-sm border rounded">
+        <div class="content-card text-center shadow-sm border rounded">
             <h2>Closed Positions</h2>
             <table class="table table-dashboard mt-3">
                 <tr>
